@@ -607,4 +607,5 @@ void bdrv_init(void)
     bdrv_register(&bdrv_qcow);
     bdrv_register(&bdrv_vmdk);
     bdrv_register(&bdrv_cloop);
+    bdrv_register(&bdrv_dmg);
 }
